HW/2/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otus-homework-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: otus-homework-service
  template:
    metadata:
      labels:
        app: otus-homework-service
    spec:
        containers:
        - name: otus-homework-service
          image: mrphelko/otus-ms-first:latest
          ports:
            - name: web
              containerPort: 8000
          livenessProbe:
            httpGet:
              port: 8000
              path: /health
            initialDelaySeconds: 20
            periodSeconds: 5
            timeoutSeconds: 2
          readinessProbe:
            httpGet:
              port: 8000
              path: /ready
            initialDelaySeconds: 30
            periodSeconds: 5
