HW/2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otus-homework-service
  labels:
    app: otus-homework
spec:
  ports:
    - protocol: TCP
      port: 9000
      targetPort: web
  type: NodePort
